合并 Adapter 模块代码，更新代码结构，迭代世代